After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724712 - rtspsrc doesn't set caps on pads before adding them
rtspsrc doesn't set caps on pads before adding them
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-19 08:48 UTC by xlinkz0
Modified: 2014-03-25 10:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
testcase (1001 bytes, text/plain)
2014-02-19 08:48 UTC, xlinkz0
Details

Description xlinkz0 2014-02-19 08:48:18 UTC
I hope title is self-explanatory.
Comment 1 xlinkz0 2014-02-19 08:48:45 UTC
Created attachment 269674 [details]
testcase
Comment 2 Tim-Philipp Müller 2014-02-20 19:14:22 UTC
Your test case doesn't work, I just get an error because http isn't a valid uri protocol for rtspsrc. But I can reproduce it with some other rtsp url.
Comment 3 Wim Taymans 2014-03-25 10:45:42 UTC
commit 3b497bf7d5ba97020db7eb88156d086e2d058365
Author: Wim Taymans <wtaymans@redhat.com>
Date:   Tue Mar 25 11:36:40 2014 +0100

    rtspsrc: copy sticky events to ghostpad
    
    When we expose internal pads as ghostpads, first copy the sticky events
    so that we have the caps and segment etc.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=724712
Comment 4 Tim-Philipp Müller 2014-03-25 10:56:32 UTC
Bah, I had a fix for that locally but hadn't pushed it :P